Correções seção empírica e introdução: sublinhados.

--- a/Articles/SFC/Empirical.org
+++ b/Articles/SFC/Empirical.org
@@ -1004,9 +1004,7 @@ This increase implies GDP to grow faster than residential investment, therefore 
 
 *** Curva de Concentração                                            :ignore:
 
-
-Additionally, some key aspects of recent housing developments have not been dealt with in depth.
-More specifically, there has been little discussion on popularization of primary houses and concentration of secondary ones[fn::According to textcite:us_census_bureau_characteristics_2017, a primary property is one that the owner has regular access to and, in the case of having more than one (secondary) property, it is the one that enjoys most of the time throughout the year. Secondary properties are those where:
+Turning now to some key aspects of housing distribution, we point out that  there has been little discussion on popularization of primary houses and concentration of secondary ones[fn::According to textcite:us_census_bureau_characteristics_2017, a primary property is one that the owner has regular access to and, in the case of having more than one (secondary) property, it is the one that enjoys most of the time throughout the year. Secondary properties are those where:
 (i) the owners reside part of the year only; (ii) it is at least 50 miles from the primary property and; (iii) cannot be subject to a rental agreement.]. The expansion of primary houses can be seen in Figure ref:fig:concentration, which shows concentration curves from 1989 to 2010 by different types of properties (primary and secondary)[fn::Concentration curves are drawn from the cumulative ordering of two distinct variables. The horizontal axis of Figure ref:fig:concentration contains the cumulative proportion of wealthy households while the vertical axis shows the accumulated proportion of a portion of this wealth (in this case, primary and secondary houses). Finally, to build the concentration curves, both axes are ordered by total wealth. Thus, unlikely the Lorenz curve, concentration curves are non-decreasing. As a consequence, it can cross the perfect equality line. For more details, see textcite:Jann_Concentration_2016.]. Based on these curves, it is possible to assess how concentrated a certain asset is by comparing it with perfect equality line[fn::In 2010, for example,  up to 25% of wealthy households owned 21.80% of all primary houses. Moving on, households up to 50%, 75% and 90% owned 61.30%, 90.10% and  95.30% respectively while 2.9% was not in the possession of any households.][fn::The higher and to the left a concentration curve is compared to the Lorenz curve, the less concentrated the asset is. In this case, the asset  is distributed in favor of the poorest strata of wealth. A concentration curve more to the right and below compared to the Lorenz curve indicates the opposite.].
 
 #+begin_export latex
