--- a/Articles/SFC/Versoes/Historico.org
+++ b/Articles/SFC/Versoes/Historico.org
@@ -304,7 +304,7 @@ A seguinte frase foi removida: Besides the usual SSM results, we report some par
 - Removi a seguinte frase: /Since the analyzed period does not correspond to the fully-adjusted position, discrepancies between actual and normal capacity utilization rate are adjusted through changes in marginal propensity to invest/
   - Além de estar confusa (como apontado), o texto pareceu mais fluido depois que tirei.
 
-* Versão <2020-11-20 sex>
+* Versão <2020-11-18 qua>
 
 ** Introdução
 
@@ -317,6 +317,8 @@ One way to do this is through houses' own rate of interest.
 Originally introduced by textcite:Sraffa_Own_1932 and applied to the US case by textcite:teixeira_crescimento_2015, this concept allows to connect asset bubble with residential investment.
 #+END_QUOTE
 
+- Ainda não entendi o porquê do trecho estar sublinhado. Imagino que possa parecer jogado. Deixei inalterado porque não consegui pensar uma forma de reescrever sem deixar de citar o Serrano e o Freitas
+  - A princípio pensei em apagar, mas aí sairia essas citações.
 
 ** Seção empírica
 
@@ -332,6 +334,7 @@ They report that residential investment predicts the US  macroeconomic fluctuati
 - Na página 4, alterei: /higher growth rate/ $\Rightarrow$ /higher residential investment growth rate/
 - Alterei a frase seguinte de /Following the Sraffian supermultiplier growth model, we conclude that increase of non-residential investment is the result of capital stock adjustment principle/ $\Rightarrow$ /Accordingly to the Sraffian Supermultiplier model, we can interpret subsequent non-residential investment increase as a result of capital stock adjustment principle/
   - Não entendi muito bem a sua sugestão. Fiquei em dúvida se era para alterar apenas a frase em amarelo ou juntar com a seguinte
+- Supondo que o seguinte trecho sublinhado estava jogdo (p.4): /Additionally, some key aspects of recent housing developments have not been dealt with in depth. More specifically, there has been little discussion on popularization of primary houses and concentration of secondary ones/, alterei para /Turning now to some key aspects of housing distribution, we point out that  there has been little discussion on popularization of primary houses and concentration of secondary ones/
 - Após as curvas de concentração: /suggests an increase in the demand for properties in the expectation of capital gains/ $\Rightarrow$ /suggests other purposes, such as rental income, speculation, etc/
   - O que achou da explicação das curvas de concentração? sugestões?
 - Iniciei subseção da taxa própria da seguinte forma:
